[gd_scene load_steps=9 format=2]

[ext_resource path="res://Asset/Scritte/ScrittaRetry,png.png" type="Texture" id=1]
[ext_resource path="res://Fonts/VideoTerminalScreen.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Asset/Scritte/ScrittaExit.png" type="Texture" id=3]
[ext_resource path="res://Screens/GameOverScreen.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 192, 64 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 192, 64 )

[node name="GameOverScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.0980392, 0.0980392, 0.0980392, 0.752941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="BlackOverlay"]
margin_left = 384.0
margin_top = 256.0
margin_right = 896.0
margin_bottom = 456.0
color = Color( 0.054902, 0.0431373, 0.129412, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BlackOverlay/ColorRect"]
margin_left = 160.0
margin_top = 32.0
margin_right = 352.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Game Over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="BlackOverlay/ColorRect"]
margin_left = 32.0
margin_top = 96.0
margin_right = 480.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 2 )
text = "Qualcuno e' morto.... forse a causa tua >:("
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="TouchScreenButton" parent="BlackOverlay/ColorRect"]
position = Vector2( 32, 128 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 1 )
shape = SubResource( 3 )

[node name="ToMenu" type="TouchScreenButton" parent="BlackOverlay/ColorRect"]
position = Vector2( 288, 128 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 3 )
shape = SubResource( 4 )
[connection signal="visibility_changed" from="." to="." method="_on_GameOverScreen_visibility_changed"]
